feat: complete the welcome page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -105,5 +105,28 @@
   "ageYears": "Age (years)",
   "gender": "Gender",
   "male": "Male",
-  "female": "Female"
+  "female": "Female",
+  "yourGoal": "Your Goal",
+  "loseWeight": "Lose Weight",
+  "loseWeightDesc": "Lose 0.5 kg per week",
+  "maintainWeight": "Maintain Weight",
+  "maintainWeightDesc": "Keep current weight",
+  "gainWeight": "Gain Weight",
+  "gainWeightDesc": "Gain 0.5 kg per week",
+  "activityLevel": "Activity Level",
+  "sedentary": "Sedentary",
+  "sedentaryDesc": "Little or no exercise",
+  "lightlyActive": "Lightly Active",
+  "lightlyActiveDesc": "Light exercise 1-3 days/week",
+  "moderatelyActive": "Moderately Active",
+  "moderatelyActiveDesc": "Moderate exercise 3-5 days/week",
+  "veryActive": "Very Active",
+  "veryActiveDesc": "Hard exercise 6-7 days/week",
+  "extraActive": "Extra Active",
+  "extraActiveDesc": "Very hard exercise & physical job",
+  "errorEmptyAge": "Please enter your age",
+  "errorInvalidAge": "Invalid age",
+  "errorSelectGender": "Please select your gender",
+  "errorSelectGoal": "Please select your goal",
+  "errorSelectActivity": "Please select your activity level"
 }
