--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -105,5 +105,28 @@
   "ageYears": "Tuổi (năm)",
   "gender": "Giới tính",
   "male": "Nam",
-  "female": "Nữ"
+  "female": "Nữ",
+  "yourGoal": "Mục tiêu của bạn",
+  "loseWeight": "Giảm cân",
+  "loseWeightDesc": "Giảm 0.5 kg mỗi tuần",
+  "maintainWeight": "Duy trì cân nặng",
+  "maintainWeightDesc": "Giữ nguyên cân nặng",
+  "gainWeight": "Tăng cân",
+  "gainWeightDesc": "Tăng 0.5 kg mỗi tuần",
+  "activityLevel": "Mức độ hoạt động",
+  "sedentary": "Ít vận động",
+  "sedentaryDesc": "Ít hoặc không tập thể dục",
+  "lightlyActive": "Vận động nhẹ",
+  "lightlyActiveDesc": "Tập nhẹ 1-3 ngày/tuần",
+  "moderatelyActive": "Vận động vừa",
+  "moderatelyActiveDesc": "Tập vừa 3-5 ngày/tuần",
+  "veryActive": "Vận động nhiều",
+  "veryActiveDesc": "Tập nặng 6-7 ngày/tuần",
+  "extraActive": "Vận động cực nhiều",
+  "extraActiveDesc": "Tập rất nặng & công việc nặng nhọc",
+  "errorEmptyAge": "Vui lòng nhập tuổi",
+  "errorInvalidAge": "Tuổi không hợp lệ",
+  "errorSelectGender": "Vui lòng chọn giới tính",
+  "errorSelectGoal": "Vui lòng chọn mục tiêu",
+  "errorSelectActivity": "Vui lòng chọn mức độ hoạt động"
 }
