feat: update localization files for English and Vietnamese

--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -9,63 +9,16 @@
   "fullName": "Họ và tên",
   "height": "Chiều cao (cm)",
   "weight": "Cân nặng (kg)",
+  "heightLabel": "Chiều cao",
+  "weightLabel": "Cân nặng",
   "getStarted": "Bắt đầu ngay",
-  
-  "mainFeatures": "Tính năng chính",
-  "trackCalories": "Theo dõi calo",
-  "trackCaloriesDesc": "Ghi nhận và tính toán lượng calo nạp vào",
-  "waterReminder": "Nhắc uống nước",
-  "waterReminderDesc": "Theo dõi lượng nước uống hàng ngày",
-  "calculateBMI": "Tính BMI",
-  "calculateBMIDesc": "Theo dõi chỉ số BMI và sức khỏe",
-  
   "journal": "Nhật ký",
-  "favorites": "Yêu thích",
+  "about": "Thông tin",
   "personal": "Cá nhân",
-  
   "todayJournal": "Nhật ký hôm nay",
   "totalCaloriesNeeded": "Tổng kcal cần nạp",
   "consumed": "Đã nạp",
   "macroNutrients": "Macro dinh dưỡng",
-  "waterIntake": "Nước đã uống",
-  
-  "addFood": "Thêm món ăn",
-  "addWater": "Thêm nước",
-  "selectFood": "Chọn món ăn",
-  "selectWaterAmount": "Chọn lượng nước",
-  "customInput": "Nhập tùy chỉnh",
-  "enterMl": "Nhập ml",
-  "add": "Thêm",
-  
-  "favoritesComingSoon": "Tính năng này sẽ sớm có mặt!",
-  "favoritesDesc": "Lưu trữ các món ăn và công thức yêu thích của bạn",
-  "comingSoon": "Sắp ra mắt",
-  "comingSoonDesc": "Theo dõi các món ăn yêu thích\nvà tạo thực đơn cá nhân hóa",
-  
-  "bmi": "BMI",
-  "heightLabel": "Chiều cao",
-  "weightLabel": "Cân nặng",
-  "yourBMI": "BMI của bạn",
-  "updateWeight": "Cập nhật cân nặng",
-  "waterGoal": "Mục tiêu nước",
-  "shouldDrinkDaily": "Nên uống mỗi ngày",
-  "customizeGoal": "Tùy chỉnh mục tiêu",
-  "lastUpdated": "Lần cuối cập nhật",
-  
-  "underweight": "Thiếu cân",
-  "normal": "Bình thường",
-  "overweight": "Thừa cân",
-  "obese": "Béo phì",
-  
-  "settings": "Cài đặt",
-  "account": "Tài khoản",
-  "language": "Ngôn ngữ",
-  "logout": "Đăng xuất",
-  "logoutConfirm": "Bạn có chắc muốn đăng xuất?",
-  "cancel": "Hủy",
-  "confirm": "Xác nhận",
-  "save": "Lưu",
-  
   "login": "Đăng nhập",
   "register": "Đăng ký",
   "email": "Email",
@@ -76,7 +29,6 @@
   "alreadyHaveAccount": "Đã có tài khoản?",
   "loginNow": "Đăng nhập ngay",
   "registerNow": "Đăng ký ngay",
-  
   "intro1Title": "Theo dõi calo dễ dàng",
   "intro1Desc": "Ghi nhận và quản lý lượng calo hàng ngày một cách đơn giản",
   "intro2Title": "Đạt mục tiêu của bạn",
