--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,54 +9,17 @@
   "fullName": "Full Name",
   "height": "Height (cm)",
   "weight": "Weight (kg)",
+  "heightLabel": "Height",
+  "weightLabel": "Weight",
   "getStarted": "Get Started",
-  
-  "mainFeatures": "Main Features",
-  "trackCalories": "Track Calories",
-  "trackCaloriesDesc": "Record and calculate your daily calorie intake",
-  "waterReminder": "Water Reminder",
-  "waterReminderDesc": "Track your daily water intake",
-  "calculateBMI": "Calculate BMI",
-  "calculateBMIDesc": "Monitor your BMI and health status",
-  
   "journal": "Journal",
-  "favorites": "Favorites",
+  "about": "About",
   "personal": "Personal",
-  
   "todayJournal": "Today's Journal",
   "totalCaloriesNeeded": "Total Calories Needed",
   "consumed": "Consumed",
   "macroNutrients": "Macro Nutrients",
   "waterIntake": "Water Intake",
-  
-  "addFood": "Add Food",
-  "addWater": "Add Water",
-  "selectFood": "Select Food",
-  "selectWaterAmount": "Select Water Amount",
-  "customInput": "Custom Input",
-  "enterMl": "Enter ml",
-  "add": "Add",
-  
-  "favoritesComingSoon": "This feature is coming soon!",
-  "favoritesDesc": "Save your favorite foods and recipes",
-  "comingSoon": "Coming Soon",
-  "comingSoonDesc": "Track your favorite foods\nand create personalized meal plans",
-  
-  "bmi": "BMI",
-  "heightLabel": "Height",
-  "weightLabel": "Weight",
-  "yourBMI": "Your BMI",
-  "updateWeight": "Update Weight",
-  "waterGoal": "Water Goal",
-  "shouldDrinkDaily": "Daily Recommendation",
-  "customizeGoal": "Customize Goal",
-  "lastUpdated": "Last Updated",
-  
-  "underweight": "Underweight",
-  "normal": "Normal",
-  "overweight": "Overweight",
-  "obese": "Obese",
-  
   "settings": "Settings",
   "account": "Account",
   "language": "Language",
@@ -65,18 +28,6 @@
   "cancel": "Cancel",
   "confirm": "Confirm",
   "save": "Save",
-  
-  "login": "Login",
-  "register": "Register",
-  "email": "Email",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "forgotPassword": "Forgot Password?",
-  "dontHaveAccount": "Don't have an account?",
-  "alreadyHaveAccount": "Already have an account?",
-  "loginNow": "Login Now",
-  "registerNow": "Register Now",
-  
   "intro1Title": "Track Calories Easily",
   "intro1Desc": "Record and manage your daily calories simply",
   "intro2Title": "Reach Your Goals",
