feat: add language to project

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -79,5 +79,47 @@
   "errorInvalidAge": "Invalid age",
   "errorSelectGender": "Please select your gender",
   "errorSelectGoal": "Please select your goal",
-  "errorSelectActivity": "Please select your activity level"
+  "errorSelectActivity": "Please select your activity level",
+
+  "addFood": "Add Food",
+  "breakfast": "Breakfast",
+  "lunch": "Lunch",
+  "dinner": "Dinner",
+  "addMeal": "Add Meal",
+
+  "about": "About",
+  "aboutProject": "About Project",
+  "aboutProjectDesc": "Calorie Tracker is a comprehensive health management application that helps you track your daily calorie intake, water consumption, and BMI index. The app is designed with a user-friendly interface and provides personalized features to help you achieve your health goals.",
+  "trackCalories": "Track Calories",
+  "mainFeatures": "Main Features",
+  "trackCalories": "Track Calories",
+  "trackCaloriesDesc": "Record and calculate your daily calorie intake",
+  "waterReminder": "Water Reminder",
+  "waterReminderDesc": "Track your daily water intake",
+  "calculateBMI": "Calculate BMI",
+  "calculateBMIDesc": "Monitor your BMI and health status",
+  "personalizedGoals": "Personalized Goals",
+  "personalizedGoalsDesc": "Set and track calorie goals based on your personal information",
+  "developer": "Developer",
+  "name": "Name",
+  "studentId": "Student ID",
+  "className": "Class",
+  "university": "University",
+  "universityName": "Phenikaa University",
+  "techStack": "Technology Stack",
+  "localDataStorage": "Local Data Storage",
+  "typography": "Typography",
+  "uiFramework": "UI Framework",
+  
+
+  "updateWeightTitle": "Update Weight",
+  "updateWaterGoalTitle": "Update Water Goal",
+  "waterGoalLabel": "Water Goal (ml)",
+  "lastUpdated": "Last Updated",
+  "bmi": "BMI",
+  "yourBMI": "Your BMI",
+  "updateWeight": "Update Weight",
+  "waterGoal": "Water Goal",
+  "shouldDrinkDaily": "Daily Recommendation",
+  "customizeGoal": "Customize Goal"
 }
