--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -80,5 +80,47 @@
   "errorInvalidAge": "Tuổi không hợp lệ",
   "errorSelectGender": "Vui lòng chọn giới tính",
   "errorSelectGoal": "Vui lòng chọn mục tiêu",
-  "errorSelectActivity": "Vui lòng chọn mức độ hoạt động"
+  "errorSelectActivity": "Vui lòng chọn mức độ hoạt động",
+
+  "addFood": "Thêm món ăn",
+  "breakfast": "Bữa sáng",
+  "lunch": "Bữa trưa",
+  "dinner": "Bữa tối",
+  "addMeal": "Thêm món",
+
+  "about": "Thông tin",
+  "aboutProject": "Về dự án",
+  "aboutProjectDesc": "Ứng dụng Calorie Tracker là một công cụ quản lý sức khỏe toàn diện, giúp bạn theo dõi lượng calo hàng ngày, lượng nước uống, và chỉ số BMI. Ứng dụng được thiết kế với giao diện thân thiện, dễ sử dụng và cung cấp các tính năng cá nhân hóa để giúp bạn đạt được mục tiêu sức khỏe của mình.",
+  "personalizedGoals": "Mục tiêu cá nhân hóa",
+  "mainFeatures": "Tính năng chính",
+  "trackCalories": "Theo dõi calo",
+  "trackCaloriesDesc": "Ghi nhận và tính toán lượng calo nạp vào",
+  "waterReminder": "Nhắc uống nước",
+  "waterReminderDesc": "Theo dõi lượng nước uống hàng ngày",
+  "calculateBMI": "Tính BMI",
+  "calculateBMIDesc": "Theo dõi chỉ số BMI và sức khỏe",
+  "aboutProjectDesc": "Ứng dụng Calorie Tracker là một công cụ quản lý sức khỏe toàn diện, giúp bạn theo dõi lượng calo hàng ngày, lượng nước uống, và chỉ số BMI. Ứng dụng được thiết kế với giao diện thân thiện, dễ sử dụng và cung cấp các tính năng cá nhân hóa để giúp bạn đạt được mục tiêu sức khỏe của mình.",
+  "personalizedGoals": "Mục tiêu cá nhân hóa",
+  "personalizedGoalsDesc": "Thiết lập và theo dõi mục tiêu calo dựa trên thông tin cá nhân",
+  "developer": "Nhà phát triển",
+  "name": "Họ và tên",
+  "studentId": "Mã sinh viên",
+  "className": "Lớp",
+  "university": "Trường",
+  "universityName": "Đại học Phenikaa",
+  "techStack": "Công nghệ sử dụng",
+  "localDataStorage": "Lưu trữ dữ liệu cục bộ",
+  "typography": "Font chữ",
+  "uiFramework": "Khung giao diện",
+
+  "updateWeightTitle": "Cập nhật cân nặng",
+  "updateWaterGoalTitle": "Cập nhật mục tiêu nước",
+  "waterGoalLabel": "Mục tiêu nước (ml)",
+  "lastUpdated": "Lần cuối cập nhật",
+  "bmi": "BMI",
+  "yourBMI": "BMI của bạn",
+  "updateWeight": "Cập nhật cân nặng",
+  "waterGoal": "Mục tiêu nước",
+  "shouldDrinkDaily": "Nên uống mỗi ngày",
+  "customizeGoal": "Tùy chỉnh mục tiêu"
 }
